--- a/src/index.html
+++ b/src/index.html
@@ -5,9 +5,12 @@
   <title>TrikiTrueke</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link rel="icon" type="image/x-icon" href="styles.css">
+ 
 </head>
+<img id="logo" src="/logo.png" alt="imgagen logo">
 <body>
+  
   <app-root></app-root>
 </body>
 </html>
